Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10747

CDesktopFolder::CompareIDs is wrong

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.1
    • Shell
    • March 2016

    Description

      Our implementation of CDesktopFolder::CompareIDs is wrong.

      It returns stuff in another order than windows, and given certain inputs, it can crash.

      Attached patch shows the problem (apitest)

      Ping thfabba (Original author of the apitest i modified).
      And gigaherz because of the shell

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              learn_more Mark Jansen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: