[SHELL32_APITEST] - Add tests for IShellFolder::CompareIDs. Patch by Mark Jansen, with additional test cases by Sylvain Deverre. CORE-10747

svn path=/trunk/; revision=71064